developerProject/force-app/main/default/objects/OJ_PM__Introducer_Asset__c/OJ_PM__Introducer_Asset__c.object-meta.xml
<CustomObject>
    <label>Introducer Asset</label>
    <nameField>
        <label>Introducer Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Introducer Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>