developerProject/force-app/main/default/objects/OJ_PM__Introducer_Asset__c/fields/OJ_PM__Amortise_the_documentation_Fee__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Amortise_the_documentation_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amortise the documentation Fee</label>
    <type>Checkbox</type>
</CustomField>