developerProject/force-app/main/default/objects/OJ_PM__Introducer_Asset__c/fields/OJ_PM__Asset__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Asset__c</fullName>
    <label>Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>