developerProject/force-app/main/default/objects/OJ_PM__Introducer_Asset__c/fields/OJ_PM__Chattel_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Chattel_Mortgage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chattel Mortgage</label>
    <type>Checkbox</type>
</CustomField>