developerProject/force-app/main/default/objects/OJ_PM__Introducer_Asset__c/fields/OJ_PM__Documentation_Fees_Inc_GST__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Documentation_Fees_Inc_GST__c</fullName>
    <label>Documentation Fees (Inc GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>