developerProject/force-app/main/default/objects/OJ_PM__Introducer_Asset__c/fields/OJ_PM__Finance_Lease__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Finance_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Lease</label>
    <type>Checkbox</type>
</CustomField>