developerProject/force-app/main/default/objects/OJ_PM__Introducer_Asset__c/fields/OJ_PM__GST_Rate__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__GST_Rate__c</fullName>
    <label>GST Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>