developerProject/force-app/main/default/objects/OJ_PM__Introducer_Asset__c/fields/OJ_PM__Hire_Purchase__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Hire_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hire Purchase</label>
    <type>Checkbox</type>
</CustomField>