developerProject/force-app/main/default/objects/OJ_PM__Introducer_Asset__c/fields/OJ_PM__Introducer__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Introducer__c</fullName>
    <label>Introducer</label>
    <referenceTo>OJ_PM__Introducer__c</referenceTo>
    <relationshipLabel>Introducer Assets</relationshipLabel>
    <relationshipName>Introducer_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>