developerProject/force-app/main/default/objects/OJ_PM__Introducer_Asset__c/fields/OJ_PM__Shared_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Shared_Interest_Rate__c</fullName>
    <label>Shared Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>