developerProject/force-app/main/default/objects/OJ_PM__Introducer_Asset__c/fields/OJ_PM__Term12__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Term12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Term12</label>
    <type>Checkbox</type>
</CustomField>